# 9-avahi-tqt

./: avahi-tqt.spec  changes.patch  tde-avahi-tqt.spec
.gear/: rules
.old-tde-avahi-tqt/: CMakeLists.txt
.old-tde-avahi-tqt/avahi-tqt/: qt-watch.cpp
altlinux/: libraries_path.patch  library_types.patch
tde-avahi-tqt/: .tdescminfo  CMakeLists.txt  avahi-tqt.pc.cmake  qt-watch.h
tde-avahi-tqt/avahi-tqt/: CMakeLists.txt
